@@ -4,8 +4,8 @@
 -38
   ***   at top-level: zetamult("a")
   ***                 ^-------------
-  *** zetamult: incorrect type in zetamult (t_STR).
-1.6449340668482264364724151666460251892
+  *** zetamult: incorrect type in zetamultconvert (t_STR).
+1.2020569031595942853997381615114499908
 1
   ***   at top-level: zetamult([1,2])
   ***                 ^---------------
@@ -24,4 +24,25 @@
 [48, 2667, -299, 3, 0]~
 [480, -13650, 1455, -8, 0]~
 [5040, -201915, 25200, -504, 2]~
-Total time spent: 44
+[1.64493406684822643647241516664602518921894990120679843774, 1.2020569031595
+9428539973816151144999076498629234049888179, 1.20205690315959428539973816151
+144999076498629234049888179, 1.082323233711138191516003696541167902774750951
+91872690768, 0.270580808427784547879000924135291975693687737979681726921, 0.
+811742425283353643637002772405875927081063213939045180762, 1.082323233711138
+19151600369654116790277475095191872690768, 1.0369277551433699263313654864570
+3416805708091950191281197, 0.09655115998944373446564553142894276403201037234
+36914152526, 0.228810397603353759768746148941688791932509342719882160229, 0.
+0965511599894437344656455314289427640320103723436914152526, 0.71156619755057
+2432096973806086402612092561204438339236492, 0.22881039760335375976874614894
+1688791932509342719882160229, 0.71156619755057243209697380608640261209256120
+4438339236492, 1.03692775514336992633136548645703416805708091950191281197]
+Vecsmall([0, 0, 1, 1, 0, 0, 1, 1])
+Vecsmall([3, 1, 3, 1])
+89
+Vecsmall([0, 0, 1, 1, 0, 0, 1, 1])
+Vecsmall([3, 1, 3, 1])
+89
+Vecsmall([0, 0, 1, 1, 0, 0, 1, 1])
+Vecsmall([3, 1, 3, 1])
+89
+Total time spent: 40
