@@ -21,3 +21,18 @@ LD=[2,2,2,2];
     if (z[1] < 0, z = -z); print(z);
   );
 }
+
+zetamultall(5)
+avec=[3,1,3,1];
+evec=[0,0,1,1,0,0,1,1];
+a=89;
+zetamultconvert(avec,0)
+zetamultconvert(avec,1)
+zetamultconvert(avec,2)
+zetamultconvert(evec,0)
+zetamultconvert(evec,1)
+zetamultconvert(evec,2)
+zetamultconvert(a,0)
+zetamultconvert(a,1)
+zetamultconvert(a,2)
+
